# STM32Study

01 LED/: LED.uvguix.Zero
01 LED/Listings/: LED.map
01 LED/Objects/: LED.axf  LED.build_log.htm  LED.htm  LED_Target 1.dep  main.crf  stm32f10x_can.d  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_gpio.crf  stm32f10x_i2c.crf  stm32f10x_it.d  stm32f10x_pwr.crf  stm32f10x_sdio.crf  stm32f10x_tim.d
01 LED/User/: main.c
02 LED_Multi/: LED.uvprojx
02 LED_Multi/.eide/: eide.json
02 LED_Multi/Listings/: LED.map
02 LED_Multi/Objects/: LED.axf  LED.build_log.htm  LED.htm  LED_Target 1.dep  delay.crf  main.crf  main.d  stm32f10x_bkp.crf  stm32f10x_cec.d  stm32f10x_crc.crf  stm32f10x_dbgmcu.d  stm32f10x_dma.d  stm32f10x_exti.crf  stm32f10x_flash.crf  stm32f10x_flash.d  stm32f10x_pwr.d  stm32f10x_tim.crf  stm32f10x_usart.crf  stm32f10x_wwdg.crf  stm32f10x_wwdg.d  system_stm32f10x.d
02 LED_Multi/User/: main.c
03 BUZZER/: LED.uvguix.Zero  LED.uvoptx
03 BUZZER/Listings/: LED.map
03 BUZZER/Objects/: LED.build_log.htm  LED.lnp  LED_Target 1.dep  main.crf  misc.crf  stm32f10x_cec.crf  stm32f10x_dac.d  stm32f10x_dma.crf  stm32f10x_fsmc.crf  stm32f10x_fsmc.d  stm32f10x_rcc.crf  stm32f10x_rcc.d  stm32f10x_rtc.d
03 BUZZER/User/: main.c
04 Key_LED/: LED.uvguix.Zero  LED.uvoptx  LED.uvprojx
04 Key_LED/Listings/: main.map  startup_stm32f10x_md.lst
04 Key_LED/Objects/: LED.axf  LED.htm  LED_Target 1.dep  core_cm3.d  delay.d  key.crf  key.d  led.crf  led.d  main.axf  main.build_log.htm  main.crf  main.d  main.htm  main.lnp  misc.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.d  stm32f10x_exti.d  stm32f10x_gpio.d  stm32f10x_it.crf  stm32f10x_iwdg.crf  stm32f10x_iwdg.d  stm32f10x_spi.crf  stm32f10x_spi.d  system_stm32f10x.crf
04 Key_LED/User/: main.c
05 Light_Buzzer/: Project.uvguix.Zero  Project.uvoptx  Project.uvprojx
05 Light_Buzzer/Hardware/inc/: BUZZER.h  LIGHT.h
05 Light_Buzzer/Hardware/src/: BUZZER.c  LIGHT.c
05 Light_Buzzer/Listings/: Project.map
05 Light_Buzzer/Objects/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  buzzer.crf  buzzer.d  delay.crf  delay.d  light.crf  light.d  main.crf  main.d  stm32f10x_adc.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_dac.crf  stm32f10x_dac.d  stm32f10x_dbgmcu.d  stm32f10x_dma.d  stm32f10x_exti.crf  stm32f10x_flash.crf  stm32f10x_fsmc.d  stm32f10x_i2c.d  stm32f10x_it.crf  stm32f10x_pwr.d  stm32f10x_rcc.d  stm32f10x_rtc.crf  stm32f10x_tim.d  stm32f10x_usart.crf  stm32f10x_usart.d  stm32f10x_wwdg.crf  stm32f10x_wwdg.d  system_stm32f10x.crf  system_stm32f10x.d
05 Light_Buzzer/System/src/: delay.c
05 Light_Buzzer/User/: main.c
06 OLED/: OLED.uvguix.Zero  OLED.uvoptx  OLED.uvprojx
06 OLED/.eide/: eide.json
06 OLED/Listings/: OLED.map
06 OLED/Objects/: OLED.axf  OLED.build_log.htm  OLED.htm  OLED.lnp  OLED_Target 1.dep  core_cm3.crf  key.crf  key.d  led.crf  led.d  main.crf  main.d  misc.crf  misc.d  oled.crf  oled.d  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_cec.d  stm32f10x_crc.crf  stm32f10x_crc.d  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_exti.d  stm32f10x_flash.d  stm32f10x_fsmc.crf  stm32f10x_gpio.crf  stm32f10x_gpio.d  stm32f10x_i2c.crf  stm32f10x_it.d  stm32f10x_iwdg.crf  stm32f10x_iwdg.d  stm32f10x_pwr.crf  stm32f10x_rcc.crf  stm32f10x_rtc.d  stm32f10x_sdio.crf  stm32f10x_sdio.d  stm32f10x_spi.crf  (+2 more)
06 OLED/User/: main.c
06 OLED_EIDE/OLED/.eide/: eide.json
06 OLED_EIDE/OLED/src/: main.c
07 Exit/: Exit.code-workspace
07 Exit/.eide/: eide.json
07 Exit/SRC/: main.c
08 OutRedCount/.eide/: eide.json
08 OutRedCount/Hardware/inc/: OutRed.h
08 OutRedCount/Hardware/src/: OutRed.c
08 OutRedCount/SRC/: main.c
09 RotateCount/.eide/: eide.json
09 RotateCount/Hardware/inc/: KEY.h  RotateEncoder.h
09 RotateCount/Hardware/src/: RotateEncoder.c
09 RotateCount/SRC/: main.c
10 USART/: USART.code-workspace
10 USART/Hardware/inc/: Serial.h
10 USART/Hardware/src/: Serial.c
10 USART/SRC/: main.c
11 HexDataPacakge/Hardware/inc/: KEY.h  Serial.h
11 HexDataPacakge/Hardware/src/: KEY.c  LED.c  Serial.c
11 HexDataPacakge/SRC/: main.c
11 HexDataPacakge/System/src/: delay.c
12 TextDataPacakge/.eide/: eide.json
12 TextDataPacakge/Hardware/inc/: LED.h  Serial.h
12 TextDataPacakge/Hardware/src/: Serial.c
12 TextDataPacakge/SRC/: main.c
12 TextDataPacakge/System/inc/: delay.h
PWM/.eide/: eide.json
PWM/Hardware/src/: timer.c
PWM/SRC/: main.c
PWM_2/.eide/: eide.json
PWM_2/Hardware/src/: timer.c
PWM_2/SRC/: main.c
PWM_3/.eide/: eide.json
PWM_3/Hardware/inc/: Encoder.h  KEY.h
PWM_3/Hardware/src/: Encoder.c  KEY.c
PWM_3/SRC/: main.c
Test/Examples/MG32F02A128/MG32F02U128/SPI_LED_Driver_Project/tmp/SPI_LED_Driver_Project/Target_1/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
Test/Keil_As_Test/: Project.uvguix.Zero  Project.uvoptx  Project.uvprojx
Test/Keil_As_Test/Listings/: main.map
Test/Keil_As_Test/Objects/: Project_Target 1.dep  main.axf  main.build_log.htm  main.crf  main.d  main.htm  main.lnp  stm32f10x_can.crf  stm32f10x_crc.d  stm32f10x_i2c.d  stm32f10x_rtc.crf  stm32f10x_sdio.d  stm32f10x_usart.d
Test/Keil_As_Test/User/: main.c
Test/STM32_Test/Output/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  core_cm3.crf  core_cm3.d  main.crf  main.d  misc.crf  misc.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  stm32f10x_crc.crf  stm32f10x_crc.d  stm32f10x_dac.crf  stm32f10x_dac.d  stm32f10x_dbgmcu.crf  stm32f10x_dbgmcu.d  stm32f10x_dma.crf  stm32f10x_dma.d  stm32f10x_exti.crf  stm32f10x_exti.d  stm32f10x_flash.crf  stm32f10x_flash.d  stm32f10x_fsmc.crf  stm32f10x_fsmc.d  stm32f10x_gpio.crf  stm32f10x_gpio.d  stm32f10x_i2c.crf  stm32f10x_i2c.d  stm32f10x_it.crf  stm32f10x_it.d  stm32f10x_iwdg.crf  (+19 more)
Test/STM32_Test/Project/: Project.uvguix.Zero  Project.uvoptx  (+1 more)
(+178 files in other folders)
